syntax = "proto3";

package tickfyblockchain.event;

import "amino/amino.proto";
import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "tickfyblockchain/event/params.proto";
import "tickfyblockchain/event/event.proto";

option go_package = "tickfy-blockchain/x/event/types";

// Query defines the gRPC querier service.
service Query {
  
  // Parameters queries the parameters of the module.
  rpc Params (QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/tickfy-blockchain/event/params";
  
  }
  
  // Queries a list of Event items.
  rpc Event    (QueryGetEventRequest) returns (QueryGetEventResponse) {
    option (google.api.http).get = "/tickfy-blockchain/event/event/{index}";
  
  }
  rpc EventAll (QueryAllEventRequest) returns (QueryAllEventResponse) {
    option (google.api.http).get = "/tickfy-blockchain/event/event";
  
  }
}
// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false, (amino.dont_omitempty) = true];
}

message QueryGetEventRequest {
  string index = 1;
}

message QueryGetEventResponse {
  Event event = 1 [(gogoproto.nullable) = false];
}

message QueryAllEventRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllEventResponse {
  repeated Event                                  event      = 1 [(gogoproto.nullable) = false];
           cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

